# appcv

./: README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/uco/ava/appcv/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: arucotestactivity_jni.cpp  calibration_jni.cpp  jniactions.h  sampleactivity_wi_jni.cpp
app/src/main/java/com/uco/ava/appcv/: MainActivity.java  MainActivityPreferencesActivity.java  ResolutionsPreference.java
app/src/main/java/uco/ava/calibration/: CalibrationActivity.java  CameraCalibrations.java
app/src/main/java/uco/ava/core/: ArucoPreferences.java  ArucoPreferencesActivity.java  ArucoTestActivity.java  CameraResolutions.java  ResolutionsPreference.java  SampleActivityWithInteraction.java
app/src/main/res/anim/: hide_to_bottom.xml  move_down.xml  move_to_rigth.xml  move_up.xml
app/src/main/res/drawable/: button_style.xml
app/src/main/res/drawable-hdpi/: count_style.xml
app/src/main/res/layout/: activity_main.xml  arucotestactivity.xml  calibration.xml  sampleactivity_wi.xml
app/src/main/res/values/: arucotypes.xml  colors.xml  strings.xml
app/src/main/res/xml/: apppreferences.xml  aruco_preferences.xml  provider_paths.xml
app/src/test/java/com/uco/ava/appcv/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary341/src/main/java/org/opencv/android/: JavaCameraView.java
